# agent-practice

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: index.html
